--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.10.13",
+    "random-sentence": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-window": "^1.8.8"
